--- a/output-css/style.css
+++ b/output-css/style.css
@@ -1,3 +1,113 @@
+.container {
+  margin: 0 auto;
+  max-width: 1300px;
+  overflow-x: hidden;
+}
 
+ul li {
+  list-style-type: none;
+}
+
+html, body {
+  margin: 0;
+  overflow-x: hidden;
+  padding: 0;
+}
+
+header, footer, div, section {
+  box-sizing: border-box;
+}
+
+.navbar {
+  background-color: #663399;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.navbar-content {
+  color: white;
+  width: 100%;
+  font-size: 18px;
+  font-family: Silkscreen;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+@media (min-width: 1100px) {
+  .navbar-content {
+    font-size: 24px;
+  }
+}
+.navbar-content ul {
+  flex-direction: column;
+  display: flex;
+  width: 100%;
+}
+@media (min-width: 680px) {
+  .navbar-content ul {
+    flex-direction: row;
+  }
+}
+.navbar-content li {
+  margin: 0.5rem 0 0.5rem 0.5rem;
+}
+@media (min-width: 680px) {
+  .navbar-content li {
+    padding: 1.5rem 0 1.5rem 1.5rem;
+  }
+}
+
+.navbar-list {
+  padding-left: 0;
+  text-align: center;
+}
+
+.navbar-right {
+  flex-direction: column;
+  display: flex;
+  width: 100%;
+}
+
+.navbar-logo {
+  width: 30px;
+  height: auto;
+  display: flex;
+}
+
+.hamburger-menu {
+  color: white;
+  padding-left: 200px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+@media (min-width: 680px) {
+  .hamburger-menu {
+    display: none;
+  }
+}
+
+.hero {
+  background: #cfcfcf;
+  width: 100%;
+  padding-left: 70px;
+  padding-right: 70px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-align: center;
+}
+.hero h1 {
+  font-family: Silkscreen;
+}
+.hero p {
+  font-family: sans-serif;
+}
+
+.hero-pic {
+  width: 100px;
+  height: auto;
+  border-radius: 25%;
+  object-fit: cover;
+}
 
 /*# sourceMappingURL=style.css.map */
