--- a/output-css/style.css
+++ b/output-css/style.css
@@ -104,10 +104,30 @@ header, footer, div, section {
 }
 
 .hero-pic {
-  width: 100px;
+  max-width: 100%;
+  width: 400px;
   height: auto;
-  border-radius: 25%;
+  margin: auto;
+  border-radius: 100%;
   object-fit: cover;
+  padding-top: 20px;
+}
+
+.hero-button {
+  background: #663399;
+  border-color: #663399;
+  border-radius: 28px;
+  border-style: solid;
+  border-width: 3px;
+  color: white;
+  font-family: sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  font-weight: bold;
+  height: 50px;
+  padding: 10px;
+  width: 150px;
+  box-shadow: 0px 10px 20px #663399;
 }
 
 /*# sourceMappingURL=style.css.map */
