--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -17,10 +17,36 @@
   }
 }
 
-.hero-pic{
+// .hero-pic-outer{
+//   border-radius: 50%;
+//   height: auto;
+//   overflow: hidden;
+//   width: 275px;
+// }
 
-  width: 100px;
+.hero-pic{
+  max-width: 100%;
+  width: 400px;
   height: auto;
-  border-radius: 25%;
+  margin: auto;
+  border-radius: 100%;
   object-fit: cover;
+  padding-top: 20px;
+}
+
+.hero-button{
+  background: $purple;
+  border-color: $purple;
+  border-radius: 28px;
+  border-style: solid;
+  border-width: 3px;
+  color: white;
+  font-family: sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  font-weight: bold;
+  height: 50px;
+  padding: 10px;
+  width: 150px;
+  box-shadow: 0px 10px 20px $purple;
 }
