--- a/output-css/style.css
+++ b/output-css/style.css
@@ -70,16 +70,19 @@ header, footer, div, section {
 }
 
 .navbar-logo {
-  width: 30px;
+  width: 50px;
   height: auto;
+}
+
+.navbar-menu {
+  display: none;
+}
+.navbar-menu.open-menu {
   display: flex;
 }
 
 .hamburger-menu {
   color: white;
-  padding-left: 200px;
-  padding-top: 10px;
-  padding-bottom: 10px;
 }
 @media (min-width: 680px) {
   .hamburger-menu {
@@ -88,29 +91,79 @@ header, footer, div, section {
 }
 
 .hero {
-  background: #cfcfcf;
+  background: #ebebeb;
+}
+
+.hero-inner {
   width: 100%;
   padding-left: 70px;
   padding-right: 70px;
   padding-top: 10px;
   padding-bottom: 10px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
-.hero h1 {
+@media (min-width: 680px) {
+  .hero-inner {
+    flex-direction: row;
+  }
+}
+
+.hero-text {
+  max-width: 100%;
+  width: 500px;
+}
+.hero-text h1 {
   font-family: Silkscreen;
 }
-.hero p {
+@media (min-width: 680px) {
+  .hero-text h1 {
+    font-size: 32px;
+  }
+}
+@media (min-width: 1100px) {
+  .hero-text h1 {
+    font-size: 38px;
+  }
+}
+.hero-text p {
   font-family: sans-serif;
+}
+@media (min-width: 680px) {
+  .hero-text p {
+    font-size: 18px;
+  }
+}
+@media (min-width: 1100px) {
+  .hero-text p {
+    font-size: 20px;
+  }
+}
+@media (min-width: 680px) {
+  .hero-text {
+    padding-top: 100px;
+  }
 }
 
 .hero-pic {
   max-width: 100%;
-  width: 400px;
+  width: 300px;
   height: auto;
   margin: auto;
   border-radius: 100%;
   object-fit: cover;
   padding-top: 20px;
+}
+@media (min-width: 680px) {
+  .hero-pic {
+    padding-left: 30px;
+  }
+}
+@media (min-width: 1100px) {
+  .hero-pic {
+    margin-right: 100px;
+  }
 }
 
 .hero-button {
