--- a/output-css/style.css
+++ b/output-css/style.css
@@ -20,9 +20,6 @@ header, footer, div, section {
 
 .navbar {
   background-color: #663399;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .navbar-content {
@@ -34,27 +31,14 @@ header, footer, div, section {
   flex-direction: column;
   justify-content: center;
 }
+@media (min-width: 680px) {
+  .navbar-content {
+    flex-direction: row-reverse;
+  }
+}
 @media (min-width: 1100px) {
   .navbar-content {
     font-size: 24px;
-  }
-}
-.navbar-content ul {
-  flex-direction: column;
-  display: flex;
-  width: 100%;
-}
-@media (min-width: 680px) {
-  .navbar-content ul {
-    flex-direction: row;
-  }
-}
-.navbar-content li {
-  margin: 0.5rem 0 0.5rem 0.5rem;
-}
-@media (min-width: 680px) {
-  .navbar-content li {
-    padding: 1.5rem 0 1.5rem 1.5rem;
   }
 }
 
@@ -62,15 +46,39 @@ header, footer, div, section {
   padding-left: 0;
   text-align: center;
 }
-
-.navbar-right {
+.navbar-list ul {
   flex-direction: column;
   display: flex;
   width: 100%;
 }
+@media (min-width: 680px) {
+  .navbar-list ul {
+    flex-direction: row;
+  }
+}
+.navbar-list li {
+  margin: 0.5rem 0 0.5rem 0.5rem;
+}
+@media (min-width: 680px) {
+  .navbar-list li {
+    padding: 1.5rem 0 1.5rem 1.5rem;
+  }
+}
+
+.navbar-right {
+  flex-direction: row;
+  display: flex;
+  width: 200px;
+  max-width: 100%;
+}
 
 .navbar-logo {
-  width: 50px;
+  display: flex;
+  flex-direction: row;
+}
+
+.navbar-logo-item {
+  width: 30px;
   height: auto;
 }
 
@@ -80,9 +88,17 @@ header, footer, div, section {
 .navbar-menu.open-menu {
   display: flex;
 }
+@media (min-width: 680px) {
+  .navbar-menu {
+    flex-direction: row;
+    display: flex;
+  }
+}
 
 .hamburger-menu {
   color: white;
+  padding-left: 100px;
+  padding-top: 30px;
 }
 @media (min-width: 680px) {
   .hamburger-menu {
