--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -23,7 +23,9 @@
   width: 500px;
 
   h1{
-    font-family: Silkscreen;
+    // font-family: Silkscreen;
+  font-family: Electrolize;
+
 
     @media(min-width:$tablet){
       font-size: 32px;
