--- a/sass/components/_nav-bar.scss
+++ b/sass/components/_nav-bar.scss
@@ -4,9 +4,9 @@
 
 .navbar-content{
   color: white;
-  width: 100%;
+  max-width: 100%;
+  width: 1300px;
   font-size: 18px;
-  // font-family: Silkscreen;
   font-family: Electrolize;
   display: flex;
   flex-direction: column;
@@ -14,6 +14,8 @@
 
   @media(min-width:$tablet){
     flex-direction: row-reverse;
+    // align-items: flex-end;
+
   }
 
   @media(min-width:$laptop){
@@ -28,7 +30,8 @@
 
   @media(min-width:$tablet){
   width: 500px;
-  padding-left: 20px
+  font-size: 20px;
+  // align-items: flex-end;
   }
 
   ul{
@@ -44,14 +47,7 @@
   }
 
   li{
-    margin: .75rem 0 .75rem .75rem;
-    // letter-spacing: 0.0625em;
-
-
-    // @media(min-width:$tablet){
-    // padding: .5rem 0 .5rem .5rem;
-
-    // }
+    margin: .9rem 0rem .9rem .9rem;
   }
 
 }
@@ -60,7 +56,7 @@
   flex-direction: row;
   display: flex;
   width: 200px;
-  max-width: 100%;
+
 
   .hamburger-menu{
     color: white;
@@ -90,6 +86,8 @@
 
 .navbar-menu{
   display: none;
+  width: 100%;
+  max-width: 1000px;
 
   &.open-menu{
     display: flex;
@@ -98,6 +96,10 @@
   @media(min-width:$tablet){
     flex-direction: row;
     display: flex;
+    align-items: left;
+
+    // align-items: flex-start;
+    
   }
 }
 
