finsihed who i am section

--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -55,19 +55,23 @@
 
 .hero-pic{
   border-radius: 100%;
-  height: auto;
+  // height: auto;
   margin: auto;
   max-width: 100%;
   object-fit: cover;
   padding-top: 20px;
   width: 300px;
+  height: 300px;
 
   @media(min-width:$tablet){
-   padding-left: 30px;
+    padding-left: 0px;
+    margin-left: 30px
   }
 
   @media(min-width:$laptop){
-    margin-right: 100px;
+    margin-left: 100px;
+    width: 500px;
+    height: 500px;
    }
 }
 
