--- a/output-css/style.css
+++ b/output-css/style.css
@@ -29,12 +29,16 @@ header, footer, div, section {
   font-size: 18px;
   font-family: Electrolize;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
+  flex-wrap: wrap;
 }
 @media (min-width: 680px) {
   .navbar-content {
     flex-direction: row-reverse;
+    flex-wrap: nowrap;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 }
 @media (min-width: 1100px) {
@@ -45,8 +49,9 @@ header, footer, div, section {
 
 .navbar-list {
   padding-left: 0;
-  text-align: center;
+  text-align: right;
   font-size: 18px;
+  width: 80%;
 }
 @media (min-width: 680px) {
   .navbar-list {
@@ -70,19 +75,16 @@ header, footer, div, section {
   margin: 0.9rem 0rem 0.9rem 0.9rem;
 }
 
-.navbar-right {
-  flex-direction: row;
-  display: flex;
-  width: 200px;
-}
-.navbar-right .hamburger-menu {
+.hamburger-menu {
   color: white;
-  padding-left: 100px;
   padding-top: 30px;
+  width: 30%;
+  margin-left: auto;
 }
 @media (min-width: 680px) {
-  .navbar-right .hamburger-menu {
+  .hamburger-menu {
     display: none;
+    visibility: hidden;
   }
 }
 
@@ -93,6 +95,8 @@ header, footer, div, section {
 @media (min-width: 680px) {
   .navbar-logo {
     padding-top: 10px;
+    padding-left: 0px;
+    padding-right: 30px;
   }
 }
 
@@ -176,21 +180,24 @@ header, footer, div, section {
 
 .hero-pic {
   border-radius: 100%;
-  height: auto;
   margin: auto;
   max-width: 100%;
   object-fit: cover;
   padding-top: 20px;
   width: 300px;
+  height: 300px;
 }
 @media (min-width: 680px) {
   .hero-pic {
-    padding-left: 30px;
+    padding-left: 0px;
+    margin-left: 30px;
   }
 }
 @media (min-width: 1100px) {
   .hero-pic {
-    margin-right: 100px;
+    margin-left: 100px;
+    width: 500px;
+    height: 500px;
   }
 }
 
@@ -223,13 +230,26 @@ header, footer, div, section {
   text-align: center;
   width: 100%;
 }
+@media (min-width: 680px) {
+  .who-i-am-content {
+    text-align: left;
+  }
+}
 .who-i-am-content h1 {
   font-family: Electrolize;
   font-size: 28px;
+  text-align: center;
 }
 .who-i-am-content p {
   font-family: sans-serif;
   font-size: 18px;
+}
+
+.p-tag {
+  max-width: 75ch;
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 1.75;
 }
 
 /*# sourceMappingURL=style.css.map */
