--- a/sass/components/_nav-bar.scss
+++ b/sass/components/_nav-bar.scss
@@ -9,11 +9,17 @@
   font-size: 18px;
   font-family: Electrolize;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
+  flex-wrap: wrap;
 
   @media(min-width:$tablet){
     flex-direction: row-reverse;
+  flex-wrap:nowrap;
+  padding-left: 30px;
+  padding-right: 30px;
+
+
     // align-items: flex-end;
 
   }
@@ -25,8 +31,9 @@
 
 .navbar-list{
   padding-left: 0;
-  text-align: center;
+  text-align: right;
   font-size: 18px;
+  width: 80%;
 
   @media(min-width:$tablet){
   width: 500px;
@@ -52,22 +59,23 @@
 
 }
 
-.navbar-right{
-  flex-direction: row;
-  display: flex;
-  width: 200px;
+// .navbar-right{
+
 
 
   .hamburger-menu{
     color: white;
-    padding-left: 100px;
     padding-top: 30px;
+    width: 30%;
+    margin-left: auto;
   
     @media(min-width:$tablet){
       display: none;
+      visibility:hidden;
+      
     }
   }
-}
+// }
 
 .navbar-logo{
   display: flex;
@@ -75,6 +83,8 @@
 
   @media(min-width:$tablet){
     padding-top: 10px;
+    padding-left: 0px;
+    padding-right: 30px;
   }
 }
 
@@ -97,14 +107,5 @@
     flex-direction: row;
     display: flex;
     align-items: left;
-
-    // align-items: flex-start;
-    
   }
 }
-
-
-
-
-
-
