--- a/sass/components/_who-i-am.scss
+++ b/sass/components/_who-i-am.scss
@@ -10,16 +10,27 @@
   text-align: center;
   width: 100%;
 
+  @media(min-width:$tablet){
+    text-align: left;
+  }
+
   h1{
   font-family: Electrolize;
   font-size: 28px;
+  text-align: center;
 
   }
 
   p{
     font-family: sans-serif;
     font-size: 18px;
-
   }
 
+}
+
+.p-tag{
+max-width: 75ch;
+margin-left: auto;
+margin-right: auto;
+line-height: 1.75;
 }
