--- a/sass/components/_nav-bar.scss
+++ b/sass/components/_nav-bar.scss
@@ -1,5 +1,7 @@
 .navbar{
   background-color: $purple;
+  background: linear-gradient(100.66deg, $purple 23.13%, rgb(86, 38, 86) 82.12%);
+  
 }
 
 .navbar-content{
