--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,5 +5,8 @@
 @import "components/hero";
 @import "components/who-i-am";
 @import "components/my-work";
+@import "components/cool-stuff";
+@import "components/mia";
+
 
 
