--- a/output-css/style.css
+++ b/output-css/style.css
@@ -8,7 +8,8 @@ ul li {
   list-style-type: none;
 }
 
-html, body {
+html,
+body {
   margin: 0;
   overflow-x: hidden;
   padding: 0;
@@ -16,6 +17,13 @@ html, body {
 
 header, footer, div, section {
   box-sizing: border-box;
+}
+
+.no-scroll {
+  height: 100%;
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
 }
 
 .navbar {
@@ -29,10 +37,15 @@ header, footer, div, section {
   width: 1300px;
   font-size: 18px;
   font-family: Electrolize;
-  display: flex;
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
+  padding: 8px 16px;
+}
+.navbar-content::after {
+  clear: both;
+  content: "";
+  display: block;
 }
 @media (min-width: 680px) {
   .navbar-content {
@@ -65,11 +78,15 @@ header, footer, div, section {
   display: flex;
   width: 100%;
   padding-left: 50px;
+  min-height: 100vh;
+  overflow: scroll;
+  padding: 18px;
 }
 @media (min-width: 680px) {
   .navbar-list ul {
     flex-direction: row;
     padding-left: 0px;
+    min-height: 0;
   }
 }
 .navbar-list li {
@@ -78,9 +95,9 @@ header, footer, div, section {
 
 .hamburger-menu {
   color: white;
-  padding-top: 30px;
-  width: 30%;
-  margin-left: auto;
+  width: 60px;
+  margin-top: 8px;
+  float: right;
 }
 @media (min-width: 680px) {
   .hamburger-menu {
@@ -90,8 +107,11 @@ header, footer, div, section {
 }
 
 .navbar-logo {
-  display: flex;
   flex-direction: row;
+  margin: 0;
+  padding: 0;
+  justify-content: flex-start;
+  float: left;
 }
 @media (min-width: 680px) {
   .navbar-logo {
@@ -99,6 +119,12 @@ header, footer, div, section {
     padding-left: 0px;
     padding-right: 30px;
   }
+}
+.navbar-logo li, .navbar-logo a {
+  display: inline-block;
+}
+.navbar-logo li {
+  margin-left: 16px;
 }
 
 .navbar-logo-item {
@@ -293,6 +319,9 @@ header, footer, div, section {
   font-family: sans-serif;
 }
 
+.personal-work {
+  padding-bottom: 20px;
+}
 @media (min-width: 680px) {
   .personal-work {
     width: 500px;
@@ -328,6 +357,151 @@ header, footer, div, section {
 }
 .personal-work-card p {
   font-family: sans-serif;
+}
+
+.cool-stuff {
+  background: #ebebeb;
+  padding-bottom: 200px;
+}
+
+.stuff_inner {
+  display: flex;
+  flex-direction: column;
+  max-width: 1300px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 40px;
+  text-align: center;
+  width: 100%;
+  height: auto;
+}
+.stuff_inner h1 {
+  font-family: Electrolize;
+  font-size: 28px;
+  text-align: center;
+}
+.stuff_inner p {
+  font-family: sans-serif;
+  font-size: 20px;
+}
+
+.cool-stuff-card {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  text-align: center;
+  position: relative;
+  width: 50%;
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  perspective: 1000px;
+}
+.cool-stuff-card p {
+  font-family: sans-serif;
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.cool-stuff-pic {
+  border-radius: 20%;
+  height: auto;
+  margin: auto;
+  max-width: 100%;
+  object-fit: cover;
+  padding-top: 20px;
+  width: 300px;
+}
+
+.card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.cool-stuff-card:hover .card-inner {
+  transform: rotateY(180deg);
+}
+
+.card-front, .card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.card-back {
+  background-color: #663399;
+  color: white;
+  transform: rotateY(180deg);
+}
+
+.mia-hero {
+  margin: auto;
+  max-width: 1100px;
+}
+
+.mia-hero-pic {
+  min-height: 178px;
+  background-position: top;
+  width: 100%;
+}
+@media screen and (min-width: 480px) {
+  .mia-hero-pic {
+    min-height: 250px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .mia-hero-pic {
+    min-height: 450px;
+  }
+}
+
+.mia-content {
+  max-width: 1100px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 40px;
+  text-align: center;
+  width: 100%;
+}
+@media (min-width: 680px) {
+  .mia-content {
+    text-align: left;
+  }
+}
+.mia-content h1 {
+  font-family: Electrolize;
+  font-size: 28px;
+  text-align: center;
+}
+.mia-content p {
+  font-family: sans-serif;
+  font-size: 18px;
+}
+
+.p-tag {
+  max-width: 75ch;
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 1.75;
 }
 
 /*# sourceMappingURL=style.css.map */
