--- a/output-css/style.css
+++ b/output-css/style.css
@@ -53,6 +53,7 @@ header, footer, div, section {
     flex-wrap: nowrap;
     padding-left: 30px;
     padding-right: 30px;
+    display: flex;
   }
 }
 @media (min-width: 1100px) {
@@ -107,8 +108,7 @@ header, footer, div, section {
 }
 
 .navbar-logo {
-  flex-direction: row;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   justify-content: flex-start;
   float: left;
@@ -118,6 +118,8 @@ header, footer, div, section {
     padding-top: 10px;
     padding-left: 0px;
     padding-right: 30px;
+    display: flex;
+    flex-direction: row;
   }
 }
 .navbar-logo li, .navbar-logo a {
