--- a/sass/components/_nav-bar.scss
+++ b/sass/components/_nav-bar.scss
@@ -10,7 +10,6 @@
   width: 1300px;
   font-size: 18px;
   font-family: Electrolize;
-  // display: flex;
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
@@ -27,6 +26,8 @@
     flex-wrap:nowrap;
     padding-left: 30px;
     padding-right: 30px;
+    display: flex;
+
 
 
     // align-items: flex-end;
@@ -91,9 +92,7 @@
 // }
 
 .navbar-logo{
-  // display: flex;
-  flex-direction: row;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   justify-content: flex-start;
   float: left;
@@ -103,6 +102,10 @@
     padding-top: 10px;
     padding-left: 0px;
     padding-right: 30px;
+  display: flex;
+  flex-direction: row;
+
+
   }
 
   li, a{
