--- a/sass/components/_nav-bar.scss
+++ b/sass/components/_nav-bar.scss
@@ -41,8 +41,8 @@
 
 .navbar-list{
   padding-left: 0;
-  text-align: right;
-  font-size: 18px;
+  text-align: center;
+  font-size: 30px;
   width: 80%;
 
   @media(min-width:$tablet){
