--- a/output-css/style.css
+++ b/output-css/style.css
@@ -64,8 +64,8 @@ header, footer, div, section {
 
 .navbar-list {
   padding-left: 0;
-  text-align: right;
-  font-size: 18px;
+  text-align: center;
+  font-size: 30px;
   width: 80%;
 }
 @media (min-width: 680px) {
