--- a/sass/_globals.scss
+++ b/sass/_globals.scss
@@ -31,9 +31,9 @@ header, footer, div, section{
   box-sizing: border-box;
 }
 
-// .no-scroll {
-//   height: 100%;
-//   overflow: hidden;
-//   position: fixed;
-//   width: 100%;
-// }
+.no-scroll {
+  height: 100%;
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+}
