--- a/sass/components/_mia.scss
+++ b/sass/components/_mia.scss
@@ -39,10 +39,7 @@
   p{
     font-family: sans-serif;
     font-size: 18px;
-    // max-width: 75ch;
-    // margin-left: auto;
-    // margin-right: auto;
-    // line-height: 1.75;
+
   }
 
 }
@@ -52,4 +49,11 @@ max-width: 75ch;
 margin-left: auto;
 margin-right: auto;
 line-height: 1.75;
+}
+
+ul{
+  font-family: sans-serif;
+  font-size: 18px;
+  text-align: center;
+  line-height: 1.75;
 }
