--- a/output-css/style.css
+++ b/output-css/style.css
@@ -33,14 +33,14 @@ header, footer, div, section {
 
 .navbar-content {
   color: white;
-  max-width: 100%;
-  width: 1300px;
-  font-size: 18px;
-  font-family: Electrolize;
   flex-direction: row;
-  justify-content: center;
   flex-wrap: wrap;
+  font-family: Electrolize;
+  font-size: 18px;
+  justify-content: center;
+  max-width: 100%;
   padding: 8px 16px;
+  width: 1300px;
 }
 .navbar-content::after {
   clear: both;
@@ -49,11 +49,11 @@ header, footer, div, section {
 }
 @media (min-width: 680px) {
   .navbar-content {
+    display: flex;
     flex-direction: row-reverse;
     flex-wrap: nowrap;
     padding-left: 30px;
     padding-right: 30px;
-    display: flex;
   }
 }
 @media (min-width: 1100px) {
@@ -63,9 +63,9 @@ header, footer, div, section {
 }
 
 .navbar-list {
+  font-size: 40px;
   padding-left: 0;
   text-align: center;
-  font-size: 40px;
   width: 80%;
 }
 @media (min-width: 680px) {
@@ -75,19 +75,19 @@ header, footer, div, section {
   }
 }
 .navbar-list ul {
-  flex-direction: column;
   display: flex;
-  width: 100%;
-  padding-left: 50px;
+  flex-direction: column;
   min-height: 100vh;
   overflow: scroll;
+  padding-left: 50px;
   padding: 18px;
+  width: 100%;
 }
 @media (min-width: 680px) {
   .navbar-list ul {
     flex-direction: row;
-    padding-left: 0px;
     min-height: 0;
+    padding-left: 0px;
   }
 }
 .navbar-list li {
@@ -96,9 +96,9 @@ header, footer, div, section {
 
 .hamburger-menu {
   color: white;
-  width: 60px;
-  margin-top: 8px;
   float: right;
+  margin-top: 8px;
+  width: 60px;
 }
 @media (min-width: 680px) {
   .hamburger-menu {
@@ -108,16 +108,16 @@ header, footer, div, section {
 }
 
 .navbar-logo {
+  float: left;
+  justify-content: flex-start;
   margin: 0 auto;
   padding: 0;
-  justify-content: flex-start;
-  float: left;
 }
 @media (min-width: 680px) {
   .navbar-logo {
-    padding-top: 50px;
     padding-left: 0px;
     padding-right: 30px;
+    padding-top: 50px;
     display: flex;
     flex-direction: row;
   }
@@ -130,23 +130,23 @@ header, footer, div, section {
 }
 
 .navbar-logo-item {
-  width: 30px;
   height: auto;
+  width: 30px;
 }
 
 .navbar-menu {
   display: none;
-  width: 100%;
   max-width: 1000px;
+  width: 100%;
 }
 .navbar-menu.open-menu {
   display: flex;
 }
 @media (min-width: 680px) {
   .navbar-menu {
-    flex-direction: row;
-    display: flex;
     align-items: left;
+    display: flex;
+    flex-direction: row;
   }
 }
 
@@ -209,24 +209,24 @@ header, footer, div, section {
 
 .hero-pic {
   border-radius: 100%;
+  height: 300px;
   margin: auto;
   max-width: 100%;
   object-fit: cover;
   padding-top: 20px;
   width: 300px;
-  height: 300px;
 }
 @media (min-width: 680px) {
   .hero-pic {
-    padding-left: 0px;
     margin-left: 30px;
+    padding-left: 0px;
   }
 }
 @media (min-width: 1100px) {
   .hero-pic {
+    height: 500px;
     margin-left: 100px;
     width: 500px;
-    height: 500px;
   }
 }
 
@@ -275,10 +275,10 @@ header, footer, div, section {
 }
 
 .p-tag {
-  max-width: 75ch;
+  line-height: 1.75;
   margin-left: auto;
   margin-right: auto;
-  line-height: 1.75;
+  max-width: 75ch;
 }
 
 .my-work {
@@ -307,15 +307,15 @@ header, footer, div, section {
 }
 
 .dev-work-card {
+  background-color: white;
   border-radius: 10px;
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
+  height: auto;
   margin: 1em;
   padding: 10px;
   text-align: center;
-  width: 275px;
-  height: auto;
-  background-color: white;
   transition: 0.5s;
+  width: 275px;
 }
 .dev-work-card h2 {
   font-family: Electrolize;
@@ -329,23 +329,23 @@ header, footer, div, section {
 }
 
 .mia-card {
-  width: 150px;
   height: 150px;
+  width: 150px;
 }
 
 .vote-card {
-  width: 100px;
   height: auto;
+  width: 100px;
 }
 
 .park-card {
-  width: 150px;
   height: auto;
+  width: 150px;
 }
 
 .aiken-card {
-  width: 150px;
   height: auto;
+  width: 150px;
 }
 
 .personal-work {
@@ -353,8 +353,8 @@ header, footer, div, section {
 }
 @media (min-width: 680px) {
   .personal-work {
-    width: 500px;
     margin: auto;
+    width: 500px;
   }
 }
 .personal-work h1 {
@@ -374,14 +374,14 @@ header, footer, div, section {
 }
 
 .personal-work-card {
+  background-color: white;
   border-radius: 10px;
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
   margin: 1em;
   padding: 10px;
   text-align: center;
-  width: 275px;
-  background-color: white;
   transition: 0.5s;
+  width: 275px;
 }
 .personal-work-card h2 {
   font-family: Electrolize;
@@ -395,13 +395,13 @@ header, footer, div, section {
 }
 
 .boston-card {
-  width: 150px;
   height: auto;
+  width: 150px;
 }
 
 .disney-card {
-  width: 150px;
   height: auto;
+  width: 150px;
 }
 
 .cool-stuff {
@@ -443,14 +443,14 @@ header, footer, div, section {
 }
 
 .cool-stuff-card {
+  background-color: white;
   border-radius: 10px;
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
   margin: 1em;
   padding: 10px;
   text-align: center;
-  width: 275px;
-  background-color: white;
   transition: 0.5s;
+  width: 275px;
 }
 .cool-stuff-card h2 {
   font-family: Electrolize;
@@ -464,18 +464,18 @@ header, footer, div, section {
 }
 
 .testing-pic {
-  width: 100px;
   height: auto;
+  width: 100px;
 }
 
 .odin-pic {
-  width: 200px;
   height: auto;
+  width: 200px;
 }
 
 .cypress-pic {
-  width: 100px;
   height: auto;
+  width: 100px;
 }
 
 .mia-hero {
@@ -484,8 +484,8 @@ header, footer, div, section {
 }
 
 .mia-hero-pic {
-  min-height: 178px;
   background-position: top;
+  min-height: 178px;
   width: 100%;
 }
 @media screen and (min-width: 480px) {
@@ -523,17 +523,17 @@ header, footer, div, section {
 }
 
 .p-tag {
-  max-width: 75ch;
+  line-height: 1.75;
   margin-left: auto;
   margin-right: auto;
-  line-height: 1.75;
+  max-width: 75ch;
 }
 
 ul {
   font-family: sans-serif;
   font-size: 18px;
-  text-align: center;
   line-height: 1.75;
+  text-align: center;
 }
 
 .footer {
@@ -541,8 +541,59 @@ ul {
 }
 .footer p {
   color: white;
-  text-align: center;
   font-size: 22px;
+  text-align: center;
+}
+
+.vote-hero {
+  margin: auto;
+  max-width: 1100px;
+}
+
+.vote-hero-pic {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 200px;
+  padding-top: 20px;
+  width: 100%;
+}
+
+.vote-content {
+  max-width: 1100px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 40px;
+  text-align: center;
+  width: 100%;
+}
+@media (min-width: 680px) {
+  .vote-content {
+    text-align: left;
+  }
+}
+.vote-content h1 {
+  font-family: Electrolize;
+  font-size: 28px;
+  text-align: center;
+}
+.vote-content p {
+  font-family: sans-serif;
+  font-size: 18px;
+}
+
+.p-tag {
+  line-height: 1.75;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 75ch;
+}
+
+ul {
+  font-family: sans-serif;
+  font-size: 18px;
+  line-height: 1.75;
+  text-align: center;
 }
 
 /*# sourceMappingURL=style.css.map */
