--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -54,24 +54,24 @@
 }
 
 .hero-pic{
-  border-radius: 100%;
   // height: auto;
+  border-radius: 100%;
+  height: 300px;
   margin: auto;
   max-width: 100%;
   object-fit: cover;
   padding-top: 20px;
   width: 300px;
-  height: 300px;
 
   @media(min-width:$tablet){
+    margin-left: 30px;
     padding-left: 0px;
-    margin-left: 30px
   }
 
   @media(min-width:$laptop){
+    height: 500px;
     margin-left: 100px;
     width: 500px;
-    height: 500px;
    }
 }
 
