--- a/sass/components/_nav-bar.scss
+++ b/sass/components/_nav-bar.scss
@@ -124,3 +124,11 @@
     flex-direction: row;
   }
 }
+
+.navbar-item:hover{
+  text-decoration:underline;
+}
+
+.navbar-logo-item:hover{
+  text-decoration:underline;
+}
