--- a/output-css/style.css
+++ b/output-css/style.css
@@ -298,6 +298,11 @@ header, footer, div, section {
   padding-top: 50px;
 }
 
+.dev-work {
+  flex-direction: column;
+  justify-content: space-around;
+  display: flex;
+}
 .dev-work h1 {
   font-family: Electrolize;
   font-size: 28px;
@@ -307,8 +312,10 @@ header, footer, div, section {
 .dev-work-inner {
   display: flex;
   flex-direction: column;
+  margin: auto;
+  justify-content: space-around;
 }
-@media (min-width: 680px) {
+@media (min-width: 1100px) {
   .dev-work-inner {
     flex-direction: row;
   }
@@ -323,7 +330,8 @@ header, footer, div, section {
   padding: 10px;
   text-align: center;
   transition: 0.5s;
-  width: 275px;
+  max-width: 300px;
+  height: auto;
 }
 .dev-work-card h2 {
   font-family: Electrolize;
@@ -374,8 +382,10 @@ header, footer, div, section {
 .personal-work-inner {
   display: flex;
   flex-direction: column;
+  margin: auto;
+  justify-content: space-around;
 }
-@media (min-width: 680px) {
+@media (min-width: 1100px) {
   .personal-work-inner {
     flex-direction: row;
   }
@@ -385,11 +395,13 @@ header, footer, div, section {
   background-color: white;
   border-radius: 10px;
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
+  height: auto;
   margin: 1em;
   padding: 10px;
   text-align: center;
   transition: 0.5s;
-  width: 275px;
+  max-width: 300px;
+  height: auto;
 }
 .personal-work-card h2 {
   font-family: Electrolize;
@@ -415,7 +427,6 @@ header, footer, div, section {
 .cool-stuff {
   background: #ebebeb;
   font-family: sans-serif;
-  margin: 0 auto;
   padding-bottom: 20px;
   padding-top: 50px;
 }
@@ -434,11 +445,8 @@ header, footer, div, section {
   display: flex;
   flex-direction: column;
   justify-content: center;
-}
-@media (min-width: 680px) {
-  .stuff-inner {
-    flex-direction: row;
-  }
+  margin: 0 auto;
+  width: 90%;
 }
 .stuff-inner h1 {
   font-family: Electrolize;
@@ -448,6 +456,18 @@ header, footer, div, section {
 .stuff-inner p {
   font-family: sans-serif;
   font-size: 20px;
+}
+
+.cards-inner {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  justify-content: space-around;
+}
+@media (min-width: 1100px) {
+  .cards-inner {
+    flex-direction: row;
+  }
 }
 
 .cool-stuff-card {
