--- a/sass/components/_my-work.scss
+++ b/sass/components/_my-work.scss
@@ -8,6 +8,10 @@
 }
 
 .dev-work{
+  flex-direction: column;
+  justify-content: space-around;
+  // width: 725px;
+  display: flex;
 
   h1{
   font-family: Electrolize;
@@ -19,9 +23,11 @@
 .dev-work-inner{
   display: flex;
   flex-direction: column;
+  margin: auto;
+  justify-content: space-around;
 
-  @media(min-width:$tablet){
-  flex-direction: row;
+  @media(min-width:$laptop){
+    flex-direction: row;
   }
 }
 
@@ -34,7 +40,8 @@
   padding: 10px;
   text-align: center;
   transition: 0.5s;
-  width: 275px;
+  max-width: 300px;
+  height: auto;
 
   h2{
   font-family: Electrolize;
@@ -87,10 +94,11 @@
 .personal-work-inner{
   display: flex;
   flex-direction: column;
-  // width: 500px;
+  margin: auto;
+  justify-content: space-around;
 
-  @media(min-width:$tablet){
-  flex-direction: row;
+  @media(min-width:$laptop){
+    flex-direction: row;
   }
 }
 
@@ -98,11 +106,13 @@
   background-color: white;
   border-radius: 10px;
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
+  height: auto;
   margin: 1em;
   padding: 10px;
   text-align: center;
   transition: 0.5s;
-  width: 275px;
+  max-width: 300px;
+  height: auto;
 
   h2{
   font-family: Electrolize;
