--- a/output-css/style.css
+++ b/output-css/style.css
@@ -624,4 +624,62 @@ header, footer, div, section {
   text-align: center;
 }
 
+.odin-hero {
+  margin: auto;
+  max-width: 1100px;
+}
+
+.odin-hero-pic {
+  background-position: top;
+  min-height: 178px;
+  width: 100%;
+}
+@media screen and (min-width: 480px) {
+  .odin-hero-pic {
+    min-height: 250px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .odin-hero-pic {
+    min-height: 450px;
+  }
+}
+
+.odin-content {
+  max-width: 1100px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 40px;
+  text-align: center;
+  width: 100%;
+}
+@media (min-width: 680px) {
+  .odin-content {
+    text-align: left;
+  }
+}
+.odin-content h1 {
+  font-family: Electrolize;
+  font-size: 28px;
+  text-align: center;
+}
+.odin-content p {
+  font-family: sans-serif;
+  font-size: 18px;
+}
+
+.p-tag {
+  line-height: 1.75;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 75ch;
+}
+
+.odin-ul {
+  font-family: sans-serif;
+  font-size: 18px;
+  line-height: 1.75;
+  text-align: center;
+}
+
 /*# sourceMappingURL=style.css.map */
