--- a/sass/components/_my-work.scss
+++ b/sass/components/_my-work.scss
@@ -5,6 +5,7 @@
   margin: 0 auto;
   padding-bottom: 20px;
   padding-top: 50px;
+  flex-direction: column;
 }
 
 .dev-work{
@@ -31,51 +32,98 @@
   }
 }
 
-.dev-work-card{
+.dev-card{
   background-color: white;
   border-radius: 10px;
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
-  height: auto;
   margin: 1em;
   padding: 10px;
   text-align: center;
   transition: 0.5s;
   max-width: 300px;
-  height: auto;
-
-  h2{
-  font-family: Electrolize;
-
-  }
-
-  p{
-    font-family: sans-serif;
-  }
+  // max-height: 400px;
+  // height: 100%;
 }
 
-.dev-work-card:hover {
+.dev-card-text{
+
+  h2{
+    font-family: Electrolize;
+  
+    }
+  
+    p{
+      font-family: sans-serif;
+    }
+}
+
+.dev-card-image{
+  max-height: 200px;
+  max-width: 200px;
+  margin: 0 auto;
+  display: inline-block;
+
+  img{
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    }
+
+}
+
+.dev-card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
-.mia-card{
-  height: 150px;
-  width: 150px;
+
+
+
+
+
+.personal-card{
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
+  margin: 1em;
+  padding: 10px;
+  text-align: center;
+  transition: 0.5s;
+  max-width: 300px;
+  // max-height: 400px;
+  // height: 100%;
 }
 
-.vote-card{
-  height: auto;
-  width: 100px;
+.personal-card-text{
+
+  h2{
+    font-family: Electrolize;
+  
+    }
+  
+    p{
+      font-family: sans-serif;
+    }
 }
 
-.park-card{
-  height: auto;
-  width: 150px;
+.personal-card-image{
+  max-height: 200px;
+  max-width: 200px;
+  margin: 0 auto;
+  display: inline-block;
+
+  img{
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    }
+
 }
 
-.aiken-card{
-  height: auto;
-  width: 150px;
+.personal-card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
+
+
 
 .personal-work{
   padding-bottom: 20px;
@@ -102,38 +150,3 @@
   }
 }
 
-.personal-work-card{
-  background-color: white;
-  border-radius: 10px;
-  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
-  height: auto;
-  margin: 1em;
-  padding: 10px;
-  text-align: center;
-  transition: 0.5s;
-  max-width: 300px;
-  height: auto;
-
-  h2{
-  font-family: Electrolize;
-
-  }
-
-  p{
-    font-family: sans-serif;
-  }
-}
-
-.personal-work-card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-.boston-card{
-  height: auto;
-  width: 150px;
-}
-
-.disney-card{
-  height: auto;
-  width: 150px;
-}
