--- a/output-css/style.css
+++ b/output-css/style.css
@@ -348,7 +348,7 @@ header, footer, div, section {
 }
 .dev-card-image img {
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: contain;
 }
 
