--- a/sass/components/_cool-stuff.scss
+++ b/sass/components/_cool-stuff.scss
@@ -122,12 +122,15 @@
 .cool-stuff-card{
   background-color: white;
   border-radius: 10px;
-  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
   margin: 1em;
   padding: 10px;
   text-align: center;
   transition: 0.5s;
   max-width: 250px;
+
+  @media(min-width:$laptop){
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.25);
+  }
 
 }
 
@@ -144,15 +147,13 @@
 }
 
 .cool-stuff-image{
-  max-height: 200px;
-  max-width: 200px;
+  height: auto;
+  width: 200px;
   margin: 0 auto;
 
   img{
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-  display: inline-block;
+    max-width: 100%;
+    max-height: auto;
     }
 
 }
