--- a/output-css/style.css
+++ b/output-css/style.css
@@ -182,6 +182,7 @@ header, footer, div, section {
 .hero-text {
   max-width: 100%;
   width: 500px;
+  padding-bottom: 20px;
 }
 .hero-text h1 {
   font-family: Electrolize;
@@ -216,13 +217,8 @@ header, footer, div, section {
 }
 
 .hero-pic {
-  border-radius: 100%;
-  height: 300px;
-  margin: auto;
-  max-width: 100%;
-  object-fit: cover;
-  padding-top: 40px;
-  width: 300px;
+  display: flex;
+  justify-content: center;
 }
 @media (min-width: 680px) {
   .hero-pic {
@@ -232,6 +228,27 @@ header, footer, div, section {
 }
 @media (min-width: 1100px) {
   .hero-pic {
+    margin-left: 100px;
+    width: 500px;
+  }
+}
+.hero-pic img {
+  border-radius: 50%;
+  display: block;
+  height: 200px;
+  margin: auto;
+  object-fit: cover;
+  width: 200px;
+  margin-top: 30px;
+}
+@media (min-width: 680px) {
+  .hero-pic img {
+    height: 300px;
+    width: 300px;
+  }
+}
+@media (min-width: 1100px) {
+  .hero-pic img {
     height: 500px;
     margin-left: 100px;
     width: 500px;
@@ -267,7 +284,6 @@ header, footer, div, section {
   max-width: 1100px;
   padding-left: 30px;
   padding-right: 30px;
-  padding-top: 40px;
   text-align: center;
   width: 100%;
 }
