--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -21,6 +21,8 @@
 .hero-text{
   max-width: 100%;
   width: 500px;
+  padding-bottom: 20px;
+
 
   h1{
   font-family: Electrolize;
@@ -52,24 +54,44 @@
 }
 
 .hero-pic{
-  border-radius: 100%;
-  height: 300px;
-  margin: auto;
-  max-width: 100%;
-  object-fit: cover;
-  padding-top: 40px;
-  width: 300px;
-
+  display: flex;
+  justify-content: center;
+  
   @media(min-width:$tablet){
     margin-left: 30px;
     padding-left: 0px;
   }
 
   @media(min-width:$laptop){
-    height: 500px;
     margin-left: 100px;
     width: 500px;
    }
+
+  img {
+    border-radius: 50%;
+    display: block;
+    height: 200px;
+    margin: auto;
+    object-fit: cover;
+    width: 200px;
+    margin-top: 30px;
+
+    @media(min-width:$tablet){
+      height: 300px;
+      width: 300px;
+
+    }
+  
+    @media(min-width:$laptop){
+      height: 500px;
+      margin-left: 100px;
+      width: 500px;
+     }
+  }
+
+
+
+
 }
 
 .hero-button{
